testdata/baselines/reference/submodule/compiler/regularExpressionGroupNameSuggestions.errors.txt
regularExpressionGroupNameSuggestions.ts(1,27): error TS1532: There is no capturing group named 'Foo' in this regular expression.


==== regularExpressionGroupNameSuggestions.ts (1 errors) ====
    const regex = /(?<foo>)\k<Foo>/;
                              ~~~
!!! error TS1532: There is no capturing group named 'Foo' in this regular expression.
!!! related TS1369 regularExpressionGroupNameSuggestions.ts:1:27: Did you mean 'foo'?
    